RESOLVED FIXED 244684
[LFC][Floats] fix css1/box_properties/float_margin.html
https://bugs.webkit.org/show_bug.cgi?id=244684
Summary [LFC][Floats] fix css1/box_properties/float_margin.html
zalan
Reported 2022-09-01 12:35:17 PDT
ssia
Attachments
Patch (1.54 KB, patch)
2022-09-01 12:37 PDT, zalan
no flags
zalan
Comment 1 2022-09-01 12:37:18 PDT
EWS
Comment 2 2022-09-01 16:01:00 PDT
Committed 254075@main (21da361b2ecf): <https://commits.webkit.org/254075@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462078 [details].
Radar WebKit Bug Importer
Comment 3 2022-09-01 16:02:16 PDT
Note You need to log in before you can comment on or make changes to this bug.