[LFC][Floats] fix css1/box_properties/float_margin.html https://bugs.webkit.org/show_bug.cgi?id=244684

Reviewed by Antti Koivisto.

Do not let inline content overlap the margin box of a float box (use the margin box geometry instead of the border box).

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleFloatContent):

Canonical link: https://commits.webkit.org/254075@main